--- a/src/app/public/academy/academy.component.html
+++ b/src/app/public/academy/academy.component.html
@@ -37,7 +37,7 @@
 
           <form >
 
-            <p> {{errorMessage}} </p>
+            <!-- <p> {{errorMessage}} </p> -->
             
             <input type="text" name="full-name" placeholder="Full Name" class="form-control"> <br>
 
