Deploying build fixes to heroku

--- a/src/app/public/merch/merch.component.html
+++ b/src/app/public/merch/merch.component.html
@@ -21,7 +21,7 @@
     
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -31,7 +31,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -41,7 +41,7 @@
         </div>
         <div class="hidden-lg col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -51,7 +51,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -71,7 +71,7 @@
     
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -81,7 +81,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -91,7 +91,7 @@
         </div>
         <div class="hidden-lg col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -101,7 +101,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -121,7 +121,7 @@
     
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -131,7 +131,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -141,7 +141,7 @@
         </div>
         <div class="hidden-lg col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
@@ -151,7 +151,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
           <a href="" class="thumbnail">
-            <img src="assets/img/merch.jpg" alt="merch">
+            <img src="merch.jpg" alt="merch">
             <div class="caption text-center">
               <h3> Gents of Lagos Snapback </h3>
               <p> Price Goes Here </p>
