--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -123,7 +123,7 @@
 
                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                         <a href="" class="thumbnail">
-                            <img src="assets/img/merch.jpg" alt="merch">
+                            <img src="merch.jpg" alt="merch">
                             <div class="caption text-center">
                                 <h3> Gents of Lagos Snapback </h3>
                                 <p> Price Goes Here </p>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                         <a href="" class="thumbnail">
-                            <img src="assets/img/merch.jpg" alt="merch">
+                            <img src="merch.jpg" alt="merch">
                             <div class="caption text-center">
                                 <h3> Gents of Lagos Snapback </h3>
                                 <p> Price Goes Here </p>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="hidden-lg col-md-6 col-sm-6 col-xs-12">
                         <a href="" class="thumbnail">
-                            <img src="assets/img/merch.jpg" alt="merch">
+                            <img src="merch.jpg" alt="merch">
                             <div class="caption text-center">
                                 <h3> Gents of Lagos Snapback </h3>
                                 <p> Price Goes Here </p>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                         <a href="" class="thumbnail">
-                            <img src="assets/img/merch.jpg" alt="merch">
+                            <img src="merch.jpg" alt="merch">
                             <div class="caption text-center">
                                 <h3> Gents of Lagos Snapback </h3>
                                 <p> Price Goes Here </p>
