Deploying latest changes

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="item">
                             <a routerLink="/theshop" routerLinkActive="true">
-                                <img src="assets/img/slide3.jpg" alt="slide3">
+                                <img src="assets/img/slide.jpg" alt="slide">
                                 <div class="carousel-caption">
                                     <h3> Visit Our Shop </h3>
                                     <p> Walk into our men's lounge and get the best men's grooming service in Lagos </p>
@@ -89,7 +89,7 @@
 
                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                         <a routerLink="/theshop" routerLinkActive="true" class="thumbnail">
-                            <img src="assets/img/slide3.jpg" alt="slide3">
+                            <img src="assets/img/slide.jpg" alt="slide">
                             <div class="caption text-center">
                                 <h3> Visit Our Shop </h3>
                                 <p> Walk into our men's lounge and get the best men's grooming service in Lagos </p>
