--- a/src/app/public/the-team/the-team.component.css
+++ b/src/app/public/the-team/the-team.component.css
@@ -7,7 +7,7 @@
 }
 
 .picture{
-    background: url('../../../assets/img/slide3.jpg');
+    background: url('../../../assets/img/slide.jpg');
     background-size: auto;
     line-height: 27.5em;
 }
