- Comitting latest version of  app

--- a/src/app/public/home/home.component.css
+++ b/src/app/public/home/home.component.css
@@ -1,5 +1,5 @@
 .back{
-    background: url('../../../assets/img/services.jpg');
+    background: url('../../../assets/img/slide1.jpg');
     background-size: cover;
     padding: 20px 20px;
     height: 40%;
