--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -17,15 +17,15 @@
 
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="assets/img/slide1.jpg" alt="slide1">
+                            <img src="assets/img/outside.jpg" alt="slide1">
                             <div class="carousel-caption">
                                 <h3> Gent of Lagos </h3>
-                                <p> Upscale Men's Grooming and Merchandise Brand </p>
+                                <p> Upscale Men's Grooming and Barber Shop </p>
                             </div>
                         </div>
                         <div class="item">
                             <a routerLink="/theshop" routerLinkActive="true">
-                                <img src="assets/img/slide.jpg" alt="slide">
+                                <img src="assets/img/theshop-main.jpg" alt="slide">
                                 <div class="carousel-caption">
                                     <h3> Visit Our Shop </h3>
                                     <p> Walk into our men's lounge and get the best men's grooming service in Lagos </p>
@@ -89,7 +89,7 @@
 
                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                         <a routerLink="/theshop" routerLinkActive="true" class="thumbnail">
-                            <img src="assets/img/slide.jpg" alt="slide">
+                            <img src="assets/img/theshop-main.jpg" alt="slide">
                             <div class="caption text-center">
                                 <h3> Visit Our Shop </h3>
                                 <p> Walk into our men's lounge and get the best men's grooming service in Lagos </p>
