--- a/src/app/business/businesshome/businesshome.component.html
+++ b/src/app/business/businesshome/businesshome.component.html
@@ -2,7 +2,7 @@
 <div class="content-wrapper">
     <section class="content">
 
-        <h2 class="page-header">Welcome User</h2>
+        <h2 class="page-header">Welcome {{user.username}}</h2>
 
         <div class="row">
 
