--- a/src/app/business/login/login.component.html
+++ b/src/app/business/login/login.component.html
@@ -1,27 +1,29 @@
 <div id="bg-overlay" class="bg-img"></div>
+<ng-progress [color]="'white'" [speed]="10" [trickleSpeed]="50" [thick]="true"></ng-progress>
 <div class="login-box">
     <div class="login-logo">
         <img src="assets/img/Capture.PNG">
-        <h3> Gents of Lagos Business </h3> 
+        <h3 style="font-family: 'Convergence', sans-serif;"> Gents of Lagos Business </h3> 
     </div>
     <!-- /.login-logo -->
     <div class="login-box-body">
 
-      <form>
+      <p style="color: red; text-align: center"> {{errorMessage}} </p>
+
+      <form #userLoginForm="ngForm" (ngSubmit)="login(userLoginForm)">
         <div class="form-group has-feedback">
-          <input type="email" class="form-control" placeholder="Username">
+          <input type="text" class="form-control" placeholder="Username" name="username" ngModel required>
           <span class="glyphicon glyphicon-user form-control-feedback"></span>
         </div>
         <div class="form-group has-feedback">
-          <input type="password" class="form-control" placeholder="Password">
+          <input type="password" class="form-control" placeholder="Password" name="password" ngModel required>
           <span class="glyphicon glyphicon-lock form-control-feedback"></span>
         </div>
         <br> <br>
         <div class="row ">
-            <button style="background-color: #0e0e28; padding: 8px; border-radius: 5px" type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+            <button style="background-color: #0e0e28; padding: 8px; border-radius: 5px" type="submit" class="btn btn-primary btn-block btn-flat">{{signInMessage}}</button>
         </div>
       </form>
 
     </div>
-    <!-- /.login-box-body -->
   </div>
