--- a/src/app/business/templates/business-nav/business-nav.component.html
+++ b/src/app/business/templates/business-nav/business-nav.component.html
@@ -1,103 +1,108 @@
-<header style="background-color: #0e0e28; color: #ffffff" class="main-header">
-  <!-- Logo -->
-  <a href="index2.html" class="logo">
-    <!-- mini logo for sidebar mini 50x50 pixels -->
-    <span class="logo-mini">
-      <b> Gents of Lagos </b></span>
-    <!-- logo for regular state and mobile devices -->
-    <span class="logo-lg">
-      <b style="color: #ffffff"> Gents of Lagos </b> 
-    </span>
-    
-  </a>
-  <!-- Header Navbar: style can be found in header.less -->
-  <nav class="navbar navbar-static-top">
-    <!-- Sidebar toggle button-->
-    <a href="" class="sidebar-toggle" style="content:none">
-      <i data-toggle="push-menu" role="button" class="glyphicon glyphicon-align-justify"></i>
-      <span class="sr-only">Toggle navigation</span>
+
+
+  <header style="background-color: #0e0e28; color: #ffffff" class="main-header">
+    <!-- Logo -->
+    <a href="index2.html" class="logo">
+      <!-- mini logo for sidebar mini 50x50 pixels -->
+      <span class="logo-mini">
+        <b> Gents of Lagos </b></span>
+      <!-- logo for regular state and mobile devices -->
+      <span class="logo-lg">
+        <b style="color: #ffffff"> Gents of Lagos </b> 
+      </span>
+      
     </a>
+    <!-- Header Navbar: style can be found in header.less -->
+    <nav class="navbar navbar-static-top">
+      <!-- Sidebar toggle button-->
+      <a class="sidebar-toggle" data-toggle="push-menu" role="button">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
 
-    <div class="navbar-custom-menu">
-      <ul class="nav navbar-nav">
-       
+      <div class="navbar-custom-menu">
+        <ul class="nav navbar-nav">
         
-      </ul>
-    </div>
-  </nav>
-</header>
-<!-- Left side column. contains the logo and sidebar -->
-<aside style="background-color: #0e0e28; color: #ffffff; height: 100%" class="main-sidebar">
-  <!-- sidebar: style can be found in sidebar.less -->
-  <section class="sidebar">
-    <!-- Sidebar user panel -->
-    <div class="user-panel">
-      <div class="pull-left image">
-        <img src="assets/img/Capture.PNG" class="img-circle" alt="User Image">
-      </div>
-      <div class="pull-left info">
-        <p>Alexander Pierce</p>
-        <a style="color: #ffffff">
-          <i class="fa fa-circle text-success"></i> User Role</a>
-      </div>
-    </div>
-
-    <!-- sidebar menu: : style can be found in sidebar.less -->
-    <ul class="sidebar-menu" data-widget="tree">
-
-      <li>
-        <a style="color: #ffffff" routerLink="/business/home" routerLinkActive="active">
-          <i class="fa fa-th"></i>
-          <span>Home</span>
-        </a>
-      </li>
-      <li>
-        <a style="color: #ffffff" routerLink="/business/revenue" routerLinkActive="active">
-          <i class="fa fa-calendar"></i>
-          <span>Revenue</span>
-        </a>
-      </li>
-      <li>
-        <a style="color: #ffffff" routerLink="/business/expenses" routerLinkActive="active">
-          <i class="fa fa-envelope"></i>
-          <span>Expenses</span> 
-        </a>
-      </li>
-      <li>
-        <a style="color: #ffffff" routerLink="/business/view-bookings" routerLinkActive="active">
-          <i class="fa fa-envelope"></i>
-          <span> Bookings/Orders </span>
-          <span class="pull-right-container">
-            <small class="label pull-right bg-red">0</small>
-          </span>
-        </a>
-      </li>
-      <li>
-        <a style="color: #ffffff" routerLink="/business/pl-analysis" routerLinkActive="active">
-          <i class="fa fa-envelope"></i>
-          <span>Profit & Loss Charts</span>
-        </a>
-      </li>
-      <li>  
-        <a style="color: #ffffff" routerLink="/business/staff" routerLinkActive="active">
-          <i class="fa fa-envelope"></i>
-          <span>Staff</span>
-        </a>
-      </li>
-      <li>
-        <a style="color: #ffffff" routerLink="/business/oflagosjournal" routerLinkActive="active">
-          <i class="fa fa-envelope"></i>
-          <span>Journal Of Lagos</span>
+            
           
-        </a>
-      </li>
-      <li>
-        <a style="color: #ffffff" routerLink="/business" routerLinkActive="active">
-          <i class="fa fa-envelope"></i>
-          <span>Logout</span>
-        </a>
-      </li>
-    </ul>
-  </section>
-  <!-- /.sidebar -->
-</aside>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <!-- Left side column. contains the logo and sidebar -->
+  <aside style="background-color: #0e0e28; color: #ffffff;" class="main-sidebar">
+    <!-- sidebar: style can be found in sidebar.less -->
+    <section class="sidebar">
+      <!-- Sidebar user panel -->
+      <div class="user-panel">
+        <div class="pull-left image">
+          <img src="assets/img/Capture.PNG" class="img-circle" alt="User Image">
+        </div>
+        <div class="pull-left info">
+          <p> {{user.full_name}} </p>
+          <a style="color: #ffffff">
+            <i class="fa fa-circle text-success"></i> {{user.title}} </a>
+        </div>
+      </div>
+
+      <!-- sidebar menu: : style can be found in sidebar.less -->
+      <ul class="sidebar-menu" data-widget="tree">
+
+        <li>
+          <a style="color: #ffffff" routerLink="/business/home" routerLinkActive="active">
+            <i class="fa fa-th"></i>
+            <span>Home</span>
+          </a>
+        </li>
+        <li>
+          <a style="color: #ffffff" routerLink="/business/revenue" routerLinkActive="active">
+            <i class="fa fa-calendar"></i>
+            <span>Revenue</span>
+          </a>
+        </li>
+        <li>
+          <a style="color: #ffffff" routerLink="/business/expenses" routerLinkActive="active">
+            <i class="fa fa-envelope"></i>
+            <span>Expenses</span> 
+          </a>
+        </li>
+        <li>
+          <a style="color: #ffffff" routerLink="/business/view-bookings" routerLinkActive="active">
+            <i class="fa fa-envelope"></i>
+            <span> Bookings/Orders </span>
+            <span class="pull-right-container">
+              <small class="label pull-right bg-red">0</small>
+            </span>
+          </a>
+        </li>
+        <li>
+          <a style="color: #ffffff" routerLink="/business/pl-analysis" routerLinkActive="active">
+            <i class="fa fa-envelope"></i>
+            <span>Profit & Loss Charts</span>
+          </a>
+        </li>
+        <li>  
+          <a style="color: #ffffff" routerLink="/business/staff" routerLinkActive="active">
+            <i class="fa fa-envelope"></i>
+            <span>Staff</span>
+          </a>
+        </li>
+        <li>
+          <a style="color: #ffffff" routerLink="/business/oflagosjournal" routerLinkActive="active">
+            <i class="fa fa-envelope"></i>
+            <span> Site Maintanance </span>
+            
+          </a>
+        </li>
+        <li>
+          <a style="color: #ffffff" routerLink="/business" routerLinkActive="active">
+            <i class="fa fa-envelope"></i>
+            <span>Logout</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <!-- /.sidebar -->
+  </aside>
