--- a/src/app/public/services/services.component.css
+++ b/src/app/public/services/services.component.css
@@ -7,7 +7,7 @@
 }
 
 .picture{
-    background: url('../../../assets/img/services.jpg');
+    background: url('../../../assets/img/servicing.jpg');
     background-size: auto;
     line-height: 27.5em;
     background-size: cover; 
