--- a/src/app/public/templates/app-nav/app-nav.component.html
+++ b/src/app/public/templates/app-nav/app-nav.component.html
@@ -6,9 +6,9 @@
           data-target="#collapsemenu"
           aria-expanded="false">
 
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+          <span style="color: #ffffff" class="icon-bar"></span>
+          <span style="color: #ffffff" class="icon-bar"></span>
+          <span style="color: #ffffff" class="icon-bar"></span>
 
         </button>
         <a routerLink="/" routerLinkActive="active" class="navbar-brand">
@@ -38,6 +38,9 @@
             <a routerLink="/theshop" routerLinkActive="active">The Shop</a>
           </li>
           <li role="presentation">
+            <a routerLink="/services" routerLinkActive="active">Our Services</a>
+          </li>
+          <li role="presentation">
             <a routerLink="/merch" routerLinkActive="active">Gents Of Lagos Merch</a>
           </li>
           <li role="presentation">
@@ -56,6 +59,9 @@
           </li> 
           <li role="presentation">
             <a routerLink="/theshop" routerLinkActive="active">The Shop</a>
+          </li>
+          <li role="presentation">
+            <a routerLink="/services" routerLinkActive="active">Our Services</a>
           </li>
           <li role="presentation">
             <a routerLink="/merch" routerLinkActive="active">Gents Of Lagos Merch</a>
