--- a/src/app/business/login/login.component.html
+++ b/src/app/business/login/login.component.html
@@ -25,5 +25,9 @@
         </div>
       </form>
 
+      <br>
+
+      <h4 style="font-family: 'Averia Serif Libre', cursive;" class="text-center"> Register New User </h4>
+
     </div>
   </div>
