--- a/src/app/business/revenue/revenue.component.html
+++ b/src/app/business/revenue/revenue.component.html
@@ -7,7 +7,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="info-box">
                     <span class="info-box-icon bg-aqua">
-                        <i class="ion ion-ios-gear-outline"></i>
+                        <i class="fa fa-calendar"></i>
                     </span>
         
                     <div class="info-box-content">
@@ -27,7 +27,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="info-box">
                     <span class="info-box-icon bg-red">
-                        <i class="fa fa-google-plus"></i>
+                        <i class="fa fa-calendar"></i>
                     </span>
         
                     <div class="info-box-content">
@@ -51,7 +51,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="info-box">
                     <span class="info-box-icon bg-green">
-                        <i class="ion ion-ios-cart-outline"></i>
+                        <i class="fa fa-calendar"></i>
                     </span>
         
                     <div class="info-box-content">
@@ -71,7 +71,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="info-box">
                     <span class="info-box-icon bg-yellow">
-                        <i class="ion ion-ios-people-outline"></i>
+                        <i class="fa fa-calendar"></i>
                     </span>
         
                     <div class="info-box-content">
@@ -105,9 +105,9 @@
                             </button>
                         </div>
                     </div>
-                    <div class="box-body">
-                        <div class="chart">
-                            <canvas id="barChart" style="height:230px"></canvas>
+                    <div class="box-body text-center">
+                        <div class="chart pad-all col-lg-offset-2">
+                            <canvas #myChart width="200" height="200" style="max-height: 70%; max-width: 70%"></canvas>
                         </div>
                     </div>
                     <!-- /.box-body -->
@@ -129,8 +129,8 @@
                         </div>
                     </div>
                     <div class="box-body">
-                        <div class="chart">
-                            <canvas id="barChart" style="height:230px"></canvas>
+                        <div class="chart pad-all col-lg-offset-2">
+                            <canvas #myChart2 width="200" height="200" style="max-height: 70%; max-width: 70%"></canvas>
                         </div>
                     </div>
                     <!-- /.box-body -->
