--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 
-    <div class="content" style="margin-top: -19px; overflow: hidden;">
+    <div class="content" style="margin-top: -19px; overflow: hidden; padding: 0">
         <div class="row">
 
             <div class="col-lg-12">
@@ -189,6 +189,8 @@
             <div class="col-lg-12">
                 <div class="col-lg-6 black text-center">
                     <div class="content" style="cursor: pointer;"  routerLink="/bookings" routerLinkActive="true">
+
+                            <br>
                         
                             <p> We are committed to providing you with a haircut that you want; a haircut that represents how you wish to be portrayed, whether
                                 contemporary or classic
