--- a/src/app/business/expenses/expenses.component.html
+++ b/src/app/business/expenses/expenses.component.html
@@ -7,9 +7,9 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="info-box">
                     <span class="info-box-icon bg-aqua">
-                        <i class="ion ion-ios-gear-outline"></i>
+                        <i class="fa fa-calendar"></i>
                     </span>
-
+        
                     <div class="info-box-content">
                         <span class="info-box-text">Today</span>
                         <span class="info-box-number">2,000</span>
@@ -27,9 +27,9 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="info-box">
                     <span class="info-box-icon bg-red">
-                        <i class="fa fa-google-plus"></i>
+                        <i class="fa fa-calendar"></i>
                     </span>
-
+        
                     <div class="info-box-content">
                         <span class="info-box-text">This Week</span>
                         <span class="info-box-number">20,000</span>
@@ -44,16 +44,16 @@
                 <!-- /.info-box -->
             </div>
             <!-- /.col -->
-
+        
             <!-- fix for small devices only -->
             <div class="clearfix visible-sm-block"></div>
-
+        
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="info-box">
                     <span class="info-box-icon bg-green">
-                        <i class="ion ion-ios-cart-outline"></i>
+                        <i class="fa fa-calendar"></i>
                     </span>
-
+        
                     <div class="info-box-content">
                         <span class="info-box-text">This Month</span>
                         <span class="info-box-number">200,000</span>
@@ -71,9 +71,9 @@
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="info-box">
                     <span class="info-box-icon bg-yellow">
-                        <i class="ion ion-ios-people-outline"></i>
+                        <i class="fa fa-calendar"></i>
                     </span>
-
+        
                     <div class="info-box-content">
                         <span class="info-box-text">This Year</span>
                         <span class="info-box-number">2,000,000</span>
@@ -106,8 +106,8 @@
                         </div>
                     </div>
                     <div class="box-body">
-                        <div class="chart">
-                            <canvas id="barChart" style="height:230px"></canvas>
+                        <div class="chart pad-all col-lg-offset-2">
+                            <canvas #myChart width="200" height="200" style="max-height: 70%; max-width: 70%"></canvas>
                         </div>
                     </div>
                     <!-- /.box-body -->
@@ -129,8 +129,8 @@
                         </div>
                     </div>
                     <div class="box-body">
-                        <div class="chart">
-                            <canvas id="barChart" style="height:230px"></canvas>
+                        <div class="chart pad-all col-lg-offset-2">
+                            <canvas #myChart2 width="200" height="200" style="max-height: 70%; max-width: 70%"></canvas>
                         </div>
                     </div>
                     <!-- /.box-body -->
