--- a/src/app/business/templates/business-nav/business-nav.component.html
+++ b/src/app/business/templates/business-nav/business-nav.component.html
@@ -1,34 +1,28 @@
 
 
-  <header style="background-color: #0e0e28; color: #ffffff" class="main-header">
+  <header style="background-color: #0e0e28; color: #ffffff;" class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a routerLink="/business/home" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini">
-        <b> Gents of Lagos </b></span>
+        <b style="font-family: 'Convergence', sans-serif"> Gents of Lagos </b></span>
       <!-- logo for regular state and mobile devices -->
       <span class="logo-lg">
-        <b style="color: #ffffff"> Gents of Lagos </b> 
+        <img src="assets/img/Capture.PNG" width="30px" height="30px" class="hidden-lg hidden-md hidden-sm" alt="User Image">
+        <b  style="color: #ffffff; font-family: 'Convergence', sans-serif"> Gents of Lagos  
+        <a class="sidebar-toggle hidden-lg hidden-md hidden-sm pull-right" style="border:0; color: #0e0e28; margin-top: -15px" data-toggle="push-menu">
+          <i class="fa fa-align-justify" style="color: white"></i>
+        </a>
+        </b>
       </span>
       
     </a>
     <!-- Header Navbar: style can be found in header.less -->
-    <nav class="navbar navbar-static-top">
+    <nav class="navbar navbar-static-top hidden-xs">
       <!-- Sidebar toggle button-->
-      <a class="sidebar-toggle" data-toggle="push-menu" role="button">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+      <a class="sidebar-toggle " style="border:0; cursor: pointer; color: #0e0e28" data-toggle="push-menu">
+          <i class="fa fa-align-justify" style="color: white"></i>
       </a>
-
-      <div class="navbar-custom-menu">
-        <ul class="nav navbar-nav">
-        
-            
-          
-        </ul>
-      </div>
     </nav>
   </header>
   <!-- Left side column. contains the logo and sidebar -->
@@ -52,25 +46,13 @@
 
         <li>
           <a style="color: #ffffff" routerLink="/business/home" routerLinkActive="active">
-            <i class="fa fa-th"></i>
+            <i class="fa fa-home"></i>
             <span>Home</span>
           </a>
         </li>
         <li>
-          <a style="color: #ffffff" routerLink="/business/revenue" routerLinkActive="active">
-            <i class="fa fa-calendar"></i>
-            <span>Revenue</span>
-          </a>
-        </li>
-        <li>
-          <a style="color: #ffffff" routerLink="/business/expenses" routerLinkActive="active">
-            <i class="fa fa-envelope"></i>
-            <span>Expenses</span> 
-          </a>
-        </li>
-        <li>
           <a style="color: #ffffff" routerLink="/business/view-bookings" routerLinkActive="active">
-            <i class="fa fa-envelope"></i>
+            <i class="fa fa-calendar"></i>
             <span> Bookings/Orders </span>
             <span class="pull-right-container">
               <small class="label pull-right bg-red">0</small>
@@ -78,27 +60,60 @@
           </a>
         </li>
         <li>
+          <a style="color: #ffffff" routerLink="/business/academy" routerLinkActive="active">
+            <i class="fa fa-graduation-cap"></i>
+            <span> Academy Applications </span>
+            <span class="pull-right-container">
+              <small class="label pull-right bg-red">0</small>
+            </span>
+          </a>
+        </li>
+        <li>
+          <a style="color: #ffffff" routerLink="/business/merch" routerLinkActive="active">
+            <i class="fa fa-plus-circle"></i>
+            <span>Merch Management</span> 
+          </a>
+        </li>
+        <li>
+          <a style="color: #ffffff" routerLink="/business/revenue" routerLinkActive="active">
+            <i class="fa fa-arrow-circle-right"></i>
+            <span>Revenue</span>
+          </a>
+        </li>
+        <li>
+          <a style="color: #ffffff" routerLink="/business/expenses" routerLinkActive="active">
+            <i class="fa fa-arrow-circle-left"></i>
+            <span>Expenses</span> 
+          </a>
+        </li>
+        <li>
           <a style="color: #ffffff" routerLink="/business/pl-analysis" routerLinkActive="active">
-            <i class="fa fa-envelope"></i>
+            <i class="fa fa-signal"></i>
             <span>Profit & Loss Charts</span>
           </a>
         </li>
         <li>  
+          <a style="color: #ffffff" routerLink="/business/customers" routerLinkActive="active">
+            <i class="fa fa-users"></i>
+            <span>Customer List</span>
+          </a>
+        </li>
+        <li>  
           <a style="color: #ffffff" routerLink="/business/staff" routerLinkActive="active">
-            <i class="fa fa-envelope"></i>
+            <i class="fa fa-user"></i>
             <span>Staff</span>
           </a>
         </li>
         <li>
-          <a style="color: #ffffff" routerLink="/business/oflagosjournal" routerLinkActive="active">
-            <i class="fa fa-envelope"></i>
-            <span> Site Maintanance </span>
+          <a style="color: #ffffff" routerLink="/business/maintenance" routerLinkActive="active">
+            <i class="fa fa-wrench"></i>
+            <span> Site Maintenance </span>
             
           </a>
         </li>
         <li>
           <a style="color: #ffffff" routerLink="/business" routerLinkActive="active">
-            <i class="fa fa-envelope"></i>
+            <i class="fa fa-th"></i>
             <span>Logout</span>
           </a>
         </li>
