--- a/src/app/public/bookings/bookings.component.html
+++ b/src/app/public/bookings/bookings.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<div class="content" style="margin-top:-19px">
+<div class="content" style="margin-top:-19px; padding: 0">
   <div class="row">
     <div class="col-lg-12">
       <div class="col-lg-6 hidden-sm hidden-xs picture">
