--- a/src/app/public/services/services.component.html
+++ b/src/app/public/services/services.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 
-<div class="content" style="margin-top: -19px">
+<div class="content" style="margin-top: -19px; padding: 0">
       <div class="row">
         <div class="col-lg-12">
           <div class="col-lg-6  picture">
