--- a/src/app/public/the-shop/the-shop.component.html
+++ b/src/app/public/the-shop/the-shop.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<div class="content" style="margin-top: -19px;">
+<div class="content" style="margin-top: -19px; padding: 0">
   <div class="row">
     <div class="jumbotron">
       <div class="container text-center">
