--- a/src/assets/css/AdminLTE.css
+++ b/src/assets/css/AdminLTE.css
@@ -9,31 +9,6 @@
  * Core: General Layout Style
  * -------------------------
  */
-
-
-.bg-img {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  opacity: .8;
-  background-image: url("../../../assets/img/IMG_9893.jpg");
-  background-size: cover; 
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-.bg-img ~ .login-box  {
-  background-color: #ffffff;
-  box-shadow: 0 0px 20px rgba(0, 0, 0, 0.15);
-}
-
 html,
 body {
   height: 100%;
@@ -70,9 +45,9 @@ body {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
   position: relative;
 }
-/* .layout-boxed {
+.layout-boxed {
   background: url('../img/boxed-bg.jpg') repeat fixed;
-} */
+}
 /*
  * Content Wrapper - contains the main content
  */
@@ -619,6 +594,7 @@ a:focus {
   .sidebar-mini.sidebar-collapse .sidebar-menu > li > a > .pull-right,
   .sidebar-mini.sidebar-collapse .sidebar-menu li.header {
     display: none !important;
+    -webkit-transform: translateZ(0);
   }
   .sidebar-mini.sidebar-collapse .main-header .logo {
     width: 50px;
@@ -1257,7 +1233,7 @@ a:focus {
  * ---------------
  */
 .form-control {
-  border-radius: 3px;
+  border-radius: 0;
   box-shadow: none;
   border-color: #d2d6de;
 }
@@ -1274,6 +1250,7 @@ a:focus {
 .form-control:not(select) {
   -webkit-appearance: none;
   -moz-appearance: none;
+  appearance: none;
 }
 .form-group.has-success label {
   color: #00a65a;
@@ -3274,12 +3251,7 @@ table.text-center th {
 .login-box,
 .register-box {
   width: 360px;
-  margin: 8% auto;
-  border: 2px solid #0e0e28;
-  border-radius: 10px;
-  padding: 20px;
-  opacity: .9;
-  background-color: #ffffff;
+  margin: 7% auto;
 }
 @media (max-width: 768px) {
   .login-box,
