Fixes to Last Set of Bugs

--- a/src/app/business/staff/staff.component.html
+++ b/src/app/business/staff/staff.component.html
@@ -171,7 +171,7 @@
               <label>Select Work Days</label>
               <select id="getter" name="days" data class="form-control select2" multiple="multiple" data-placeholder="Select Working Days"
                 style="width: 100%;">
-                <option (click)="boom" value="Monday">Monday</option>
+                <option value="Monday">Monday</option>
                 <option value="Tuesday">Tuesday</option>
                 <option value="Wednesday">Wednesday</option>
                 <option value="Thursday">Thursday</option>
