--- a/src/app/business/staff/staff.component.html
+++ b/src/app/business/staff/staff.component.html
@@ -157,7 +157,7 @@
         </button>
         <h4 class="modal-title">UPDATE SCHEDULE</h4>
       </div>
-      <form #schedule="ngForm" (ngSubmit)="postSchedule(schedule)">
+      <!-- <form #schedule="ngForm" (ngSubmit)="postSchedule(schedule)">
         <div class="modal-body">
           <div class="box-body">
             <div class="form-group">
@@ -191,7 +191,7 @@
           <button type="button" class="btn btn-outline pull-left" data-dismiss="modal">CLOSE</button>
           <button type="submit" class="btn btn-outline">UPDATE</button>
         </div>
-      </form>
+      </form> -->
     </div>
     <!-- /.modal-content -->
   </div>
